overlays/production/longhorn/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: internal-ca-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Longhorn"
    gethomepage.dev/description: "Distributed Storage"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "longhorn.png"
    gethomepage.dev/weight: "50"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - longhorn.elmstreet79.de
      secretName: longhorn-tls
  rules:
    - host: longhorn.elmstreet79.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
